Final ImageServices build for ISLE release 1.1